Name:                csv-conduit
Version:             0.7.1.0
Synopsis:            A flexible, fast, conduit-based CSV parser library for Haskell.
Homepage:            http://github.com/ozataman/csv-conduit
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          Ozgun Ataman <ozataman@gmail.com>
Category:            Data, Conduit, CSV, Text
Build-type:          Simple
Cabal-version:       >= 1.9.2
Tested-with:         GHC == 7.6.1
Description:
  CSV files are the de-facto standard in many situations involving data transfer,
  particularly when dealing with enterprise application or disparate database
  systems.

  .

  While there are a number of CSV libraries in Haskell, at the time of this
  project's start in 2010, there wasn't one that provided all of the following:

  .

  * Full flexibility in quote characters, separators, input/output
  .
  * Constant space operation
  .
  * Robust parsing, correctness and error resiliency
  .
  * Convenient interface that supports a variety of use cases
  .
  * Fast operation
  .

  This library is an attempt to close these gaps. Please note that
  this library started its life based on the enumerator package and
  has recently been ported to work with conduits instead. In the
  process, it has been greatly simplified thanks to the modular nature
  of the conduits library.

  .

  Following the port to conduits, the library has also gained the
  ability to parameterize on the stream type and work both with
  ByteString and Text.

  .

  For more documentation and examples, check out the README at:
  .

  <http://github.com/ozataman/csv-conduit>
  .


extra-source-files:
  README.md
  changelog.md
  test/test.csv
  test/Test.hs

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
      Data.CSV.Conduit
      Data.CSV.Conduit.Types
      Data.CSV.Conduit.Conversion
      Data.CSV.Conduit.Parser.ByteString
      Data.CSV.Conduit.Parser.Text
  other-modules:
      Data.CSV.Conduit.Conversion.Internal
      Data.CSV.Conduit.Monoid
  ghc-options: -Wall -funbox-strict-fields
  if flag(lib-Werror)
    ghc-options: -Werror
  hs-source-dirs: src
  build-depends:
      attoparsec             >= 0.10
    , base                   >= 4 && < 5
    , bytestring
    , conduit                >= 1.2.8 && < 2.0
    , conduit-extra
    , containers             >= 0.3
    , exceptions             >= 0.3
    , monad-control
    , text
    , data-default
    , vector
    , array
    , blaze-builder
    , unordered-containers
    , transformers
    , mtl
    , mmorph
    , primitive
    , resourcet              >= 1.1.2.1
    , semigroups

  if impl(ghc >= 7.2.1)
    cpp-options: -DGENERICS
    build-depends: ghc-prim >= 0.2 && < 0.6


test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wall
  if flag(lib-Werror)
    ghc-options: -Werror
  hs-source-dirs: test
  build-depends:
      base >= 4 && < 5
    , bytestring
    , containers >= 0.3
    , csv-conduit
    , directory
    , vector
    , HUnit >= 1.2
    , test-framework
    , test-framework-hunit
    , text
    , transformers
    , mtl
    , primitive


source-repository head
  type:     git
  location: git://github.com/ozataman/csv-conduit.git
