Name:                csv-enumerator
Version:             0.8
Synopsis:            A flexible, fast, enumerator-based CSV parser library for Haskell.  
Homepage:            http://github.com/ozataman/csv-enumerator
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman 
Maintainer:          Ozgun Ataman <ozataman@gmail.com>
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2
Description:
  For more information and examples, check out the README at:
  <http://github.com/ozataman/csv-enumerator>.
  
  The API is fairly well documented and I would encourage you to keep your
  haddocks handy.


extra-source-files:
  README.markdown

Library
  hs-source-dirs: src
  Exposed-modules:     
      Data.CSV.Enumerator
  Other-modules:
      Data.CSV.Enumerator.Types
  build-depends:
      attoparsec >= 0.8 && < 0.9
    , attoparsec-enumerator >= 0.2.0.3
    , base >= 4 && < 5
    , containers >= 0.3
    , directory
    , bytestring
    , enumerator >= 0.4.5 && < 0.5
    , transformers >= 0.2
    , safe
    , unix-compat >= 0.2.1.1
  extensions:
    ScopedTypeVariables
