Name:                csv-enumerator
Version:             0.10.1.1
Synopsis:            A flexible, fast, enumerator-based CSV parser library for Haskell.  
Homepage:            http://github.com/ozataman/csv-enumerator
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman 
Maintainer:          Ozgun Ataman <ozataman@gmail.com>
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2
Description:

  CSV files are the de-facto standard in many situations involving data transfer,
  particularly when dealing with enterprise application or disparate database
  systems.

  .

  While there are a number of CSV libraries in Haskell, at the time of this
  project's start in 2010, there wasn't one that provided all of the following:

  .

  * Full flexibility in quote characters, separators, input/output
  .
  * Constant space operation
  .
  * Robust parsing, correctness and error resiliency
  .
  * Convenient interface that supports a variety of use cases
  .
  * Fast operation
  .

  This library is an attempt to close these gaps.
  .

  For more documentation and examples, check out the README at:
  .

  <http://github.com/ozataman/csv-enumerator>
  .
  
  The API is fairly well documented and I would encourage you to keep your
  haddocks handy. If you run into problems, just email me or holler over at
  #haskell. 


extra-source-files:
  README.markdown
  test/csv-enumerator-test.cabal
  test/test.csv
  test/Test.hs

Library
  hs-source-dirs: src
  Exposed-modules:     
      Data.CSV.Enumerator
      Data.CSV.Enumerator.Parser
  Other-modules:
      Data.CSV.Enumerator.Types
  build-depends:
      attoparsec >= 0.10
    , attoparsec-enumerator >= 0.2
    , base >= 4 && < 5
    , containers >= 0.3
    , directory
    , bytestring
    , enumerator >= 0.4.5
    , transformers >= 0.2
    , safe
    , unix-compat >= 0.2.1.1
  extensions:
    ScopedTypeVariables
  ghc-options: -funbox-strict-fields
